# dvmax

./: .coveragerc  .gitignore  README.md  all_feature_analysis.ipynb  explore_parquet.ipynb  feature_analysis.ipynb  init_vm.sh  pyproject.toml  requirements.txt  tickers_analysis.ipynb  us_tickers.txt
.github/workflows/: generate-features.yml  python-app.yml  run_notebooks.yml
cli/: macro_batch_runner.py  ticker_batch_runner.py
config/: us_tickers_subset.txt
features_data/_audit/: GE_2021-12-31.txt  GE_2022-12-31.txt  PYPL_2024-12-31.txt
features_data/_invalid/: GE_2025-01-01_GE_net_debt_to_ebitda_abnormal_change.parquet  V_2025-01-01_V_net_debt_to_ebitda_abnormal_change.parquet
features_data/macro_history/: united_states.parquet
features_data/status/: last_run.json  processed.json  progress.json
features_data/tickers/: us_tickers_subset_limited.txt
features_data/tickers_history/: AAPL.parquet  AOS.parquet  CHRW.parquet  DVN.parquet  GE.parquet  GOOGL.parquet  JPM.parquet  MCD.parquet  NFLX.parquet  O.parquet  PAYC.parquet  PEP.parquet  PLTR.parquet  PYPL.parquet  QCOM.parquet  TAP.parquet  TPL.parquet  UPS.parquet  USB.parquet  V.parquet  features_all_tickers_timeseries.parquet
features_data/tickers_static/: static_ticker_info.parquet
features_parquet/macro/: united_states.parquet
features_parquet/tickers_data/: AAPL.parquet  (+20 more)
notebooks/: all_feature_analysis.ipynb  tickers_analysis.ipynb
samples/: playground.py  requirements.txt
scripts/: init_vm.sh
tests/: conftest.py  test_report_live.py  test_report_mocked.py
tools/: fmp_preflight.py
(+112 files in other folders)
