[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataprep"
version = "0.1.0"
description = "Data preparation utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

# Console commands
[project.scripts]
ticker-batch-runner = "dataprep.features.aggregation.ticker_batch_runner:main"
macro-batch-runner  = "dataprep.features.aggregation.macro_batch_runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
